[project]
name = ""
version = ""
description = ""
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
license-expression = "MIT"
dependencies = [
    "invoke>=1.7.0",
    "loguru>=0.6.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
