[tool.poetry]
name = "builder"
version = "1.1.4"
description = ""
authors = ["svtter <svtter@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"
loguru = "^0.6.0"
GitPython = "^3.1.27"
PyYAML = "^6.0"
click = "^8.1.2"
dataclasses-json = "^0.5.7"

[tool.poetry.scripts]
tbuilder = "builder.__main__:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
